♻️ (controller): Now allowing multiple implementations, added a root controlller

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,24 +8,23 @@ else ()
   set (TINYHASH_LIB_TYPE SHARED)
 endif ()
 
-set (
-    TINYHASH_SRC
-    hash.c
-    entry.c
-    table.c
-    key.c
+add_subdirectory(common)
+add_subdirectory(separate_chaining)
+
+set (TINYHASH_SRC
+  tinyhash.c
 )
 
-set (
-    TINYHASH_HEADERS
-    entry.h
-    table.h
-    hash.h
-    types.h
-    key.h
+set (TINYHASH_HEADERS
+  tinyhash.h
 )
 
-add_library (${TINYHASH_NAME} ${TINYHASH_LIB_TYPE} ${TINYHASH_SRC})
-
+add_library(
+  ${TINYHASH_NAME} ${TINYHASH_LIB_TYPE}
+  ${TINYHASH_SRC}
+  $<TARGET_OBJECTS:common_objects>
+  $<TARGET_OBJECTS:separate_chaining_objects>
+)
 install (TARGETS ${TINYHASH_NAME} DESTINATION lib)
+
 install (FILES ${TINYHASH_HEADERS} DESTINATION include/${TINYHASH_NAME})
