✨ (iterator): Added a hashamp iterator and the `th_len` function

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(COMMON_SRC
     hash.c
     key.c
+    iterator.c
 )
 
 set(COMMON_HEADERS
@@ -8,6 +9,7 @@ set(COMMON_HEADERS
     key.h
     types.h
     table.h
+    iterator.h
 )
 
 add_library(common_objects OBJECT ${COMMON_SRC})
